--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "app.js",
   "dependencies": {
     "koa": "^2.0.1",
-    "koa-router": "^5.4.0"
+    "koa-route": "^3.2.0",
+    "koa-router": "^7.0.1"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --harmony app.js"
+    "start": "node --harmony ./koa/app.js"
   },
   "author": "AyleinOter",
   "license": "ISC"
