--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "dependencies": {
     "koa": "^2.0.1",
     "koa-route": "^3.2.0",
-    "koa-router": "^7.0.1"
+    "koa-router": "^7.0.1",
+    "mongodb": "^2.2.24",
+    "node-uuid": "^1.4.7",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.2"
   },
   "devDependencies": {},
   "scripts": {
